# Frame

./: CMakeLists.txt  Changelog.txt  README.md
_static/: Backup_of_pixel_formats.cdr  pixel_formats.cdr
src/: CMakeLists.txt  Frame.cpp  Frame.h  FrameVersion.h  FrameVersion.h.in
static/: pixel_formats.cdr
test/: CMakeLists.txt  main.cpp
